vou terminar em casa

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>ATIVIDADE 10 - FRANCISCO BARA</title>
 </head>
 <body>
+    <main>
+        <h1>ATIVIDADE 10 - FRANCISCO BARA</h1>
+         <p1>CONTEÚDO DE EXTREMA QUALIDADE, VAMOS FALAR HOJE SOBRE O FUTURO DA SELEÇÃO BRASILEIRA, CREIO EU QUE PRECISAMOS DE UM TECNICO MAIS COMPETENTE E DE JOGADORES MAIS RAÇUDOS. UM EXEMPLO SERIA O JG</p1> 
+    </main> 
     
 </body>
 </html>
