--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ATIVIDADE 10 - FRANCISCO BARA</title>
+    <script> type = "module" src = "src" </script> 
 </head>
 <body>
     <main>
         <h1>ATIVIDADE 10 - FRANCISCO BARA</h1>
-         <p1>CONTEÚDO DE EXTREMA QUALIDADE, VAMOS FALAR HOJE SOBRE O FUTURO DA SELEÇÃO BRASILEIRA, CREIO EU QUE PRECISAMOS DE UM TECNICO MAIS COMPETENTE E DE JOGADORES MAIS RAÇUDOS. UM EXEMPLO SERIA O JG</p1> 
+         <p1>CONTEÚDO DE EXTREMA QUALIDADE, VAMOS FALAR HOJE SOBRE O FUTURO DA SELEÇÃO BRASILEIRA, CREIO EU QUE PRECISAMOS DE UM TECNICO MAIS COMPETENTE E DE JOGADORES MAIS RAÇUDOS.
+            UM EXEMPLO SERIA O JG</p1> 
     </main> 
     
 </body>
